grammar.js
    source_file: $ => repeat($._top_level_statement),

    _top_level_statement: $ => choice(
      $._statement,
      $.hotstring,
      $.remap,
      $.hotkey,
    ),

    line_comment: $ => prec(PREC.COMMENT, choice(token(';'), token(/;[^@\r\n][^\r\n]*/))),

    directive_comment: $ => prec(PREC.COMMENT, seq(
      token(';@'),
      field('directive', alias(/[^\r\n\s]*/i, $.directive_identifier)),
      optional(field('arguments', alias(/[^\r\n]*/, $.directive_arguments))),
      $._eol,
    )),

    //# region General Expressions

    _single_expression: $ => choice(
      $._pairwise_operation,
      $._literal,
      $.identifier,
      $.dynamic_identifier,
      $._primary_expression,
      $.verbal_not_operation,
      $.dereference_operation,
      $.varref_operation,
      // The maybe operator (?) is a postfix marker on an operand. It is permitted
      // in expression position generally so that optional chains (x?.y) and
      // alpha.29 short-circuiting (f()? as an operand of any operator) compose
      // naturally. Where it is actually legal is contextual; we are permissive.
      $.optional_expression,
    ),

    expression_sequence: $ => prec(PREC.COMMA, seq(
      $._single_expression,
      repeat(seq(',', $._single_expression)),
    )),

    // A `local`/`global`/`static` declaration list: `static a := 1, b := 2, c`. Every name in
    // the list takes the declared scope, so each gets its own declarator rather than the list
    // decaying into an expression_sequence in which only the first name is marked.
    //
    // The list may be empty: a bare `global` or `static` as a function's first line selects
    // assume-global / assume-static mode. A bare `local` is *not* legal ("Unexpected
    // declaration"), nor is either keyword anywhere but the first line - both contextual, so
    // both are permitted here.
    //
    // FIXME some declarations are contextually illegal - you can't delcare local variables in the auto-execute
    // section, for example. We may not be able to detect those with pure grammar rules
    assignment_operation: $ => prec.left(PREC.ASSIGNMENT, seq(
      field('left', $._single_expression),
      field('operator', $.assignment_operator),
      field('right', $._single_expression),
    )),

    dereference_operation: $ => prec.left(PREC.DEREFERENCE, seq(
      '%', field('operand', $._single_expression), '%',
    )),

    // Maybe more accurately a "reference operation", since in v2.1 these can produce PropRefs
    // or invoke __ref
    additive_operation: $ => prec.left(PREC.ADDITIVE, seq(
      field('left', $._single_expression),
      field('operator', choice('+', '-')),
      field('right', $._single_expression),
    )),

    multiplicative_operation: $ => prec.left(PREC.MULTIPLICATIVE, seq(
      field('left', $._single_expression),
      field('operator', choice('*', '/', '//')),
      field('right', $._single_expression),
    )),

    member_access: $ => prec(PREC.MEMBER_ACCESS, seq(
      field('object', $._single_expression),
      '.',
      field('member', choice(
        $.identifier,
        alias($._numeric_property_name, $.identifier),
        $.dereference_operation,
        alias($._member_dynamic_identifier, $.dynamic_identifier),
      )),
    )),

    // A combination of identifiers and derefs, such as `a%b%`
    // Derefs can follow other derefs, like obj.%a%%b%
    // All parts must be contiguous (no whitespace) — `a %b%` is implicit concatenation, not a dynamic identifier
    // Adapted from: https://github.com/Descolada/keysharp/blob/master/Keysharp.Core/Scripting/Parser/Antlr/MainParser.g4#L480
    _member_dynamic_identifier: $ => prec.dynamic(1, prec.right(PREC.MEMBER_ACCESS, choice(
      seq(
        // Unlike variable names, property names may also *start* with a digit (`obj.2a%k%`)
        choice($.identifier, alias($._numeric_property_name, $.identifier)),
        $.dereference_operation,
        repeat(choice(
          $.identifier,
          alias($._numeric_property_name, $.identifier),
          $.dereference_operation)),
      ),
      seq(
        $.dereference_operation,
        repeat1(choice(
          $.identifier,
          alias($._numeric_property_name, $.identifier),
          $.dereference_operation,
        )),
      ),
    ))),

    // The "maybe" operator: a postfix `?` permitting its operand to be unset.
    // Syntactically it just wraps the immediately-preceding operand; the
    // short-circuit semantics are a runtime concern and are not modelled here.
    // The operand is restricted to the things that can legally precede `?`:
    // a variable, a property/member access, an index access, or a call.
    parenthesized_expression: $ => seq('(', $.expression_sequence, ')'),

    assignment_operator: $ =>
      choice( ':=', '+=', '-=', '*=', '/=', '//=', '.=', '|=', '&=', '^=', '>>=', '<<=', '>>>=', '??='),

    index_access: $ => prec(PREC.OVERRIDE, seq(
      field('object', $._single_expression),
      token.immediate('['),
      field('arguments', optional($.arg_sequence)),
      ']',
    )),

    // MsgBox("Hello", "Example", "IconI OK")
    // Can be used in expressions
    function_call: $ => prec(PREC.OVERRIDE, seq(
      field('function', $._single_expression),
      token.immediate('('),
      field('arguments', optional($.arg_sequence)),
      ')',
    )),

    // MsgBox "Hello", "Example", "IconI OK"
    // Can only be used as a statement (not in expressions)
    _arg: $ => choice(
      $._single_expression,
      $.empty_arg,
    ),

    arg_sequence: $ => prec.right(choice(
      // Args without expansion
      seq(
        $._arg,
        repeat(seq(',', $._arg)),
        /**
         * A trailing comma is allowed but ignored - you can test this
         *    Function(params*) => MsgBox(params.length)
         *    Function(1,) ; "1"
         */
        optional(','),
      ),
      // Only the *last* argument may be expanded, hence the separate alternatives rather
      // than admitting array_expansion_operation as an ordinary `_arg`. They share the
      // `_arg (',' _arg)*` prefix with the branch above so that LALR can defer the decision
      // to the marker itself.
      // Single arg with expansion
      $.array_expansion_operation,
      // Multiple args with last one having expansion
      seq(
        $._arg,
        repeat(seq(',', $._arg)),
        ',',
        $.array_expansion_operation,
      ),
    )),

    // Postfix `*`, which expands an iterable into the enclosing argument list or array
    // literal. array_expansion_marker is produced by the external scanner, which
    // disambiguates it from the multiplication operator by looking ahead for ')' or ']'.
    function_declaration: $ => seq(
      $._function_def_marker,
      optional(field('scope', $.scope_identifier)),
      field('name', $.identifier),
      field('head', $.function_head),
      field('body', $.function_body),
    ),

    method_declaration: $ => seq(
      $._method_def_marker,
      optional(field('scope', $.scope_identifier)),
      field('name', choice(
        $.identifier,
        alias($._numeric_property_name, $.identifier),
      )),
      field('head', $.function_head),
      field('body', $.function_body),
    ),

    function_body: $ => choice(
      $.block,
      seq('=>', $._single_expression),
    ),

    function_head: $ => seq(
      '(',
      optional(choice($.wildcard, $.param_sequence)),
      ')',
    ),

    // "formal parameter list"
    param_sequence: $ => choice(
      // Just a variadic parameter: (params*)
      $.variadic_param,
      // One or more regular params, optionally followed by a variadic or wildcard: (a, b, rest*)
      seq(
        choice($._param, $.byref_param),
        repeat(seq(',', choice($._param, $.byref_param))),
        optional(choice(
          seq(',', $.variadic_param),
          seq(',', $.wildcard),
        )),
      ),
    ),

    _param: $ => choice(
      $.identifier,
      $.optional_param,
      $.default_param,
    ),

    // A parameter may be marked optional with the maybe operator (name?). Unlike a
    // general optional_expression, a parameter name is only ever a bare identifier.
    // Shares PREC.MAYBE with optional_expression so the reduce/reduce on `(a?)`
    // is a genuine conflict resolved by GLR (see conflicts), not by precedence.
    default_param: $ => seq(field('name', $.identifier), $._initializer),

    _initializer: $ => seq(
      field('operator', alias(':=', $.assignment_operator)),
      field('value', $._single_expression)),

    byref_param: $ => seq('&', field('param', $._param)),

    variadic_param: $ => seq(field('name', $.identifier), $.wildcard),

    wildcard: $ => '*',

    //# endregion

    //# region Literals
    integer_literal: $ => token(/([0-9]+)/),

    float_literal: $ => choice(
      token(/[0-9]+\.[0-9]+/),                  // standard, leading digit (e.g. 1.5)
      // Leading-dot float. Lower prec than member_access so `obj.5` lexes as member access to property `5`
      token(prec(-1, /\.[0-9]+/)),
      token(/\d+(?:\.\d+)?(?:[eE][+-]?\d+)/),    // scientific notation, incl. e.g 1e-5
    ),

    boolean_literal: $ => token(
      prec(PREC.KEYWORD, choice(/true/i, /false/i)),
    ),

    string_literal: $ => choice(
      token(/"([^"`\r\n]|`[^\r\n\t])*"/),
      token(/'([^'`\r\n]|`[^\r\n\t])*'/),
    ),

    // The elements are an arg_sequence rather than an expression_sequence: an array literal
    // takes exactly what an argument list takes, including elided elements (`[1,,3]`) and a
    // trailing array expansion (`[a, rest*]`), neither of which is an expression.
    object_literal: $ => seq('{', optional($._object_literal_member_sequence), '}'),

    _object_literal_member_sequence: $ => seq(
      $.object_literal_member,
      repeat(seq(',', $.object_literal_member)),
      // like arg sequences, trailing commas allowed and ignored
      optional(','),
    ),

    object_literal_member: $ => seq(
      field('key', choice(
        $.identifier,
        alias($._numeric_property_name, $.identifier),
        $.dynamic_identifier,
        $.dereference_operation,
      )),
      ':',
      field('value', $._single_expression)),

    //# endregion

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // AHK allows property and method names, but not variable names, to begin with a digit
    // https://www.autohotkey.com/docs/alpha/Concepts.htm#names
    _numeric_property_name: $ => token(/[0-9][a-zA-Z0-9_]*/),

    // Note: not strictly "modifiers" because declaring one can switch a function into assume-local/global mode
    scope_identifier: $ => token(
      prec(PREC.KEYWORD, choice(
        /static/i,
        /local/i,
        /global/i,
      ))),

    //# region Continuation Sections

    _block_body: $ => seq($._statement, optional($._block_body)),

    block: $ => seq(
      '{', optional($._block_body), '}',
    ),

    return_statement: $ => prec.right(PREC.DEFAULT,
      seq(
        $.return,
        optional(seq($._value_start, field('value', $._single_expression))),
      ),
    ),

    return: $ => kwtok(/return/i),
    class_declaration: $ => seq(
      $._class_decl_marker,
      $.class,
      field('name', $.identifier),
      optional(seq(
        $.extends,
        field('superclass', choice($.identifier, $.member_access)),
      )),
      field('body', $.class_body),
    ),

    class_body: $ => seq('{', _class_body_members($), '}'),

    property_declaration: $ => seq(
      optional(field('scope', $.scope_identifier)),
      choice(
        // Accessor forms, which declare exactly one property.
        seq(
          field('name', $._property_name),
          // Unlike function_head, the brackets may not be empty ("Empty [] not permitted"),
          // but they may hold a lone anonymous variadic marker (`__Item[*]`).
          field('head', optional(seq('[', choice($.wildcard, $.param_sequence), ']'))),
          field('body', choice(
            // getter-only shorthand: prop => 42
            seq('=>', alias($._single_expression, $.getter)),
            $.property_declaration_block,
          )),
        ),
        // Initializer-list form. One declarator per name, so that `static a := 1, b := 2`
        // yields a name/value pair per property rather than repeating both fields on the
        // declaration itself.
        seq(
          alias($._first_property_declarator, $.property_declarator),
          repeat(seq(',', $.property_declarator)),
        ),
      ),
    ),

    // Only the *first* declarator is required to be initialized, and only it can have a
    // scope keyword
    _first_property_declarator: $ => seq(
      field('name', choice($._property_name, alias($.scope_identifier, $.identifier))),
      field('initializer', $._initializer),
    ),

    property_declarator: $ => seq(
      field('name', $._property_name),
      field('initializer', optional($._initializer)),
    ),

    _property_name: $ => choice(
      $.identifier,
      alias($._numeric_property_name, $.identifier), // property names may begin with a digit
      alias($._qualified_property_name, $.member_access),
    ),

    // A dotted chain of literal identifiers (`x.y`, `Prototype.sharedValue`,
    // `a.b.c`) used as a property-declaration target or a `catch` class name. Must be
    // literal identifiers, so far narrower scope than a typical member_acess
    property_declaration_block: $ => seq(
      '{',
      optional(choice(
        seq(field('getter', $.getter), field('setter', optional($.setter))),
        seq(field('setter', $.setter), field('getter', optional($.getter))),
      )),
      '}',
    ),

    getter: $ => seq($.get, field('body', $.function_body)),
    setter: $ => seq($.set, field('body', $.function_body)),

    // class-related keywords
    class: $ => kwtok(/class/i),
    extends: $ => kwtok(/extends/i),
    get: $ => kwtok(/get/i),
    set: $ => kwtok(/set/i),

    //# endregion

    unset: $ => kwtok(/unset/i),

    // Reserved keyword (not currently used as operator in v2, but reserved)
    struct: $ => kwtok(/struct/i),

    struct_declaration: $ => seq(
      $._class_decl_marker,
      $.struct,
      field('name', $.identifier),
      optional(seq(
        $.extends,
        field('superclass', choice($.identifier, $.member_access)),
      )),
      field('body', $.struct_body),
    ),

    struct_body: $ => seq('{', _class_body_members($), '}'),

    typed_property_declaration: $ => prec.right(seq(
      field('name', choice(
        $.identifier,
        alias($._numeric_property_name, $.identifier),
      )),
      ':',
      field('type', $.type_specifier),
      optional($._initializer),
    )),

    // Docs say that type specifiers have very specific rules but I think they're outdated, integer literals don't
    // work in alpha.30. General idea is that it must be an expression evaluating to a Class that fulfils certain
    // properties (basically, is a struct), with caveats. No top-level dereference operations, for example.
    // https://www.autohotkey.com/docs/alpha/Structs.htm#type-specs
    hotif_directive: $ => prec.right(seq(
      directive_name($, /#Hotif/i),
      optional(field('expression', $._single_expression)),
      $._eol,
    )),
