test/corpus/class-declarations.txt
================================================================================
Empty class declaration
================================================================================

class Example { 

}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body)))

================================================================================
Empty class declaration with superclass
================================================================================

class Example extends Object { 

}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (extends)
    (identifier)
    (class_body)))

================================================================================
Class with method
================================================================================

class Example { 

    ClassMethod(arg1) {
        return arg1 * 2
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body
      (method_declaration
        (identifier)
        (function_head
          (param_sequence
            (identifier)))
        (function_body
          (block
            (return_statement
              (return)
              (multiplicative_operation
                (identifier)
                (integer_literal)))))))))

================================================================================
Class with static method
================================================================================

class Example { 

    static ClassMethod(arg1) {
        return arg1 * 2
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body
      (method_declaration
        (scope_identifier)
        (identifier)
        (function_head
          (param_sequence
            (identifier)))
        (function_body
          (block
            (return_statement
              (return)
              (multiplicative_operation
                (identifier)
                (integer_literal)))))))))

================================================================================
Class with static and instance methods
================================================================================

class Example { 

    InstanceMethod() {
        return 42
    }

    static ClassMethod(arg1) {
        return arg1 * 2
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body
      (method_declaration
        (identifier)
        (function_head)
        (function_body
          (block
            (return_statement
              (return)
              (integer_literal)))))
      (method_declaration
        (scope_identifier)
        (identifier)
        (function_head
          (param_sequence
            (identifier)))
        (function_body
          (block
            (return_statement
              (return)
              (multiplicative_operation
                (identifier)
                (integer_literal)))))))))

================================================================================
Class with fat-arrow method
================================================================================

class Example 
{ 
    InstanceMethod() => 42
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body
      (method_declaration
        (identifier)
        (function_head)
        (function_body
          (integer_literal))))))

================================================================================
Class with static fat-arrow method
================================================================================

class Example 
{ 
    static InstanceMethod() => 42
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body
      (method_declaration
        (scope_identifier)
        (identifier)
        (function_head)
        (function_body
          (integer_literal))))))

================================================================================
Class with nested methods
================================================================================

class Example 
{ 
    OuterMethod(*) 
    {
        InnerMethod() {
            return 1
        }

        return InnerMethod
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body
      (method_declaration
        (identifier)
        (function_head
          (wildcard))
        (function_body
          (block
            (function_declaration
              (identifier)
              (function_head)
              (function_body
                (block
                  (return_statement
                    (return)
                    (integer_literal)))))
            (return_statement
              (return)
              (identifier))))))))

================================================================================
Class with property initializer
================================================================================

class Example { 
    prop := 1
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        (property_declarator
          name: (identifier)
          operator: (assignment_operator)
          value: (integer_literal))))))

================================================================================
Class with static property initializer
================================================================================

class Example { 
    static prop := 1
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        scope: (scope_identifier)
        (property_declarator
          name: (identifier)
          operator: (assignment_operator)
          value: (integer_literal))))))

================================================================================
Class with getter-only shorthand property
================================================================================

class Example { 
    prop => 1
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body
      (property_declaration
        (identifier)
        (getter
          (integer_literal))))))

================================================================================
Class with static getter-only shorthand property
================================================================================

class Example { 
    static prop => 1
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body
      (property_declaration
        (scope_identifier)
        (identifier)
        (getter
          (integer_literal))))))

================================================================================
Class property with getter
================================================================================

class Example { 
    prop {
        get {
            return "one"
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (block
                (return_statement
                  (return)
                  value: (string_literal))))))))))

================================================================================
Static class property with getter
================================================================================

class Example { 
    static prop {
        get {
            return "one"
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        scope: (scope_identifier)
        name: (identifier)
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (block
                (return_statement
                  (return)
                  value: (string_literal))))))))))

================================================================================
Class property with setter
================================================================================

class Example { 
    prop {
        set {
            x := value
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        body: (property_declaration_block
          setter: (setter
            (set)
            body: (function_body
              (block
                (assignment_operation
                  left: (identifier)
                  operator: (assignment_operator)
                  right: (identifier))))))))))

================================================================================
Static Class property with setter
================================================================================

class Example { 
    static prop {
        set {
            x := value
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        scope: (scope_identifier)
        name: (identifier)
        body: (property_declaration_block
          setter: (setter
            (set)
            body: (function_body
              (block
                (assignment_operation
                  left: (identifier)
                  operator: (assignment_operator)
                  right: (identifier))))))))))

================================================================================
Class property with getter and setter
================================================================================

class Example { 
    prop {
        get {
            return x
        }
        set {
            x := value
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (block
                (return_statement
                  (return)
                  value: (identifier)))))
          setter: (setter
            (set)
            body: (function_body
              (block
                (assignment_operation
                  left: (identifier)
                  operator: (assignment_operator)
                  right: (identifier))))))))))

================================================================================
Class property with setter before getter
================================================================================

class Example { 
    prop {
      set => a
      get => b
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        body: (property_declaration_block
          setter: (setter
            (set)
            body: (function_body
              (identifier)))
          getter: (getter
            (get)
            body: (function_body
              (identifier))))))))

================================================================================
Empty class property declaration
================================================================================

class Example { 
    prop {
      ; Why is this allowed?
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        body: (property_declaration_block
          (line_comment))))))

================================================================================
Static class property with getter and setter
================================================================================

class Example { 
    static prop {
        get {
            return x
        }
        set {
            x := value
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        scope: (scope_identifier)
        name: (identifier)
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (block
                (return_statement
                  (return)
                  value: (identifier)))))
          setter: (setter
            (set)
            body: (function_body
              (block
                (assignment_operation
                  left: (identifier)
                  operator: (assignment_operator)
                  right: (identifier))))))))))

================================================================================
Class property with fat-arrow getter
================================================================================

class Example { 
    prop {
        get => x
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (identifier))))))))

================================================================================
Class property with fat-arrow setter
================================================================================

class Example { 
    prop {
        set => x := value
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        body: (property_declaration_block
          setter: (setter
            (set)
            body: (function_body
              (assignment_operation
                left: (identifier)
                operator: (assignment_operator)
                right: (identifier)))))))))

================================================================================
Class property with fat-arrow getter and setter
================================================================================

class Example { 
    prop {
        get => x
        set => x := value
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (identifier)))
          setter: (setter
            (set)
            body: (function_body
              (assignment_operation
                left: (identifier)
                operator: (assignment_operator)
                right: (identifier)))))))))

================================================================================
Class property with argument
================================================================================

class Example { 
    __Item[index] {
        get => x + index
        set => x + index := value
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        head: (param_sequence
          (identifier))
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (additive_operation
                left: (identifier)
                right: (identifier))))
          setter: (setter
            (set)
            body: (function_body
              (assignment_operation
                left: (additive_operation
                  left: (identifier)
                  right: (identifier))
                operator: (assignment_operator)
                right: (identifier)))))))))

================================================================================
Static class property with argument
================================================================================

class Example { 
    static __Item[index] {
        get => x + index
        set => x + index := value
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        scope: (scope_identifier)
        name: (identifier)
        head: (param_sequence
          (identifier))
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (additive_operation
                left: (identifier)
                right: (identifier))))
          setter: (setter
            (set)
            body: (function_body
              (assignment_operation
                left: (additive_operation
                  left: (identifier)
                  right: (identifier))
                operator: (assignment_operator)
                right: (identifier)))))))))

================================================================================
Class property with multiple arguments
================================================================================

class Example { 
    __Item[a, b] {
        get => x + (a * b)
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        head: (param_sequence
          (identifier)
          (identifier))
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (additive_operation
                left: (identifier)
                right: (parenthesized_expression
                  (expression_sequence
                    (multiplicative_operation
                      left: (identifier)
                      right: (identifier))))))))))))

================================================================================
Class property with arguments using getter-only shorthand
================================================================================

class Example { 
    __Item[a, b] => (a * b)
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        head: (param_sequence
          (identifier)
          (identifier))
        body: (getter
          (parenthesized_expression
            (expression_sequence
              (multiplicative_operation
                left: (identifier)
                right: (identifier)))))))))

================================================================================
Class property with an anonymous variadic argument
================================================================================

class Example {
    __Item[*] {
        get => Example.Throw("get")
        set => Example.Throw("set")
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        head: (wildcard)
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (function_call
                function: (member_access
                  object: (identifier)
                  member: (identifier))
                arguments: (arg_sequence
                  (string_literal)))))
          setter: (setter
            (set)
            body: (function_body
              (function_call
                function: (member_access
                  object: (identifier)
                  member: (identifier))
                arguments: (arg_sequence
                  (string_literal))))))))))

================================================================================
Class property with an anonymous variadic argument using getter-only shorthand
================================================================================

class Example {
    __Item[*] => 42
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        head: (wildcard)
        body: (getter
          (integer_literal))))))

================================================================================
Static class property with an anonymous variadic argument
================================================================================

class Example {
    static __Item[*] {
        get => 1
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        scope: (scope_identifier)
        name: (identifier)
        head: (wildcard)
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (integer_literal))))))))

================================================================================
Class property with a named variadic argument
================================================================================

class Example {
    __Item[args*] {
        get => args.Length
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        head: (param_sequence
          (variadic_param
            name: (identifier)
            (wildcard)))
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (member_access
                object: (identifier)
                member: (identifier)))))))))

================================================================================
Class property with a trailing wildcard after named arguments
================================================================================

class Example {
    __Item[a, &b, *] {
        get => a
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        head: (param_sequence
          (identifier)
          (byref_param
            param: (identifier))
          (wildcard))
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (identifier))))))))

================================================================================
Property declaration with mixed getter and setter styles
================================================================================

class Example
{
    explcitGetterSetter {
        get => 4
        set {
            val := 10
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        name: (identifier)
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (integer_literal)))
          setter: (setter
            (set)
            body: (function_body
              (block
                (assignment_operation
                  left: (identifier)
                  operator: (assignment_operator)
                  right: (integer_literal))))))))))

================================================================================
Class with mixed property declaration styles
================================================================================

class Example { 
    prop := unset

    getterOnlyShorthand => "getter only"

    explcitGetterSetter {
        get => 4
        set {
            val := 10
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    body: (class_body
      (property_declaration
        (property_declarator
          name: (identifier)
          operator: (assignment_operator)
          value: (unset)))
      (property_declaration
        name: (identifier)
        body: (getter
          (string_literal)))
      (property_declaration
        name: (identifier)
        body: (property_declaration_block
          getter: (getter
            (get)
            body: (function_body
              (integer_literal)))
          setter: (setter
            (set)
            body: (function_body
              (block
                (assignment_operation
                  left: (identifier)
                  operator: (assignment_operator)
                  right: (integer_literal))))))))))

================================================================================
Class with property and method
================================================================================

class Example { 
    prop := unset

    __New(arg) 
    {
        var := arg
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body
      (property_declaration
        (property_declarator
          (identifier)
          (assignment_operator)
          (unset)))
      (method_declaration
        (identifier)
        (function_head
          (param_sequence
            (identifier)))
        (function_body
          (block
            (assignment_operation
              (identifier)
              (assignment_operator)
              (identifier))))))))

================================================================================
Nested classes
================================================================================

class Example { 
    class Nested {
        
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body
      (class_declaration
        (class)
        (identifier)
        (class_body)))))

================================================================================
Class with nested struct
================================================================================

class Example { 
    struct Nested {
        
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body
      (struct_declaration
        (struct)
        (identifier)
        (struct_body)))))

================================================================================
Nested classes with superclass
================================================================================

class Outer extends Object { 
    class Inner extends Outer {
        
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    name: (identifier)
    (extends)
    superclass: (identifier)
    body: (class_body
      (class_declaration
        (class)
        name: (identifier)
        (extends)
        superclass: (identifier)
        body: (class_body)))))

================================================================================
Deeply nested classes with properties
================================================================================

class Outer extends Object 
{ 
    class Inner extends Outer 
    {
        class Inner2 
        {
            class Inner3 
            {
                class Inner4 
                {
                    prop[arg] => %arg%
                }
            }
        }

        className => "Inner2"
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (extends)
    (identifier)
    (class_body
      (class_declaration
        (class)
        (identifier)
        (extends)
        (identifier)
        (class_body
          (class_declaration
            (class)
            (identifier)
            (class_body
              (class_declaration
                (class)
                (identifier)
                (class_body
                  (class_declaration
                    (class)
                    (identifier)
                    (class_body
                      (property_declaration
                        (identifier)
                        (param_sequence
                          (identifier))
                        (getter
                          (dereference_operation
                            (identifier))))))))))
          (property_declaration
            (identifier)
            (getter
              (string_literal))))))))

================================================================================
Class extending inner class of another
================================================================================

class Foo extends Bar.Baz {
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (extends)
    (member_access
      (identifier)
      (identifier))
    (class_body)))

================================================================================
Class with method that shadows keyword
================================================================================

class Foo {
  If(arg) {
    DoStuff()
  }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body
      (method_declaration
        (identifier)
        (function_head
          (param_sequence
            (identifier)))
        (function_body
          (block
            (function_call
              (identifier))))))))
